# fuego

./: AUTHORS  Makefile.am  NEWS  README  TODO  configure.ac  configure.in  setup-build.sh
data/: features.model
doc/: Makefile
doc/doxygen/: Makefile  main.html  toc.html
doc/fuegomain/: doxygen.cfg
doc/general/: doxygen.cfg
doc/go/: Makefile  doxygen.cfg
doc/gouct/: doxygen.cfg
doc/gtpengine/: Makefile  (+1 more)
features/: FeBasicFeatures.cpp  FeBasicFeatures.h  FeCommands.cpp  FeCommands.h  FeData.h  FeFeatureWeights.cpp  FeFeatureWeights.h  FeKnowledge.cpp  FeKnowledge.h  FeNestedPattern.cpp  FeNestedPattern.h  FePattern.cpp  FePattern.h  FePatternBase.cpp  FePatternBase.h  Makefile.am
features/test/: FeBasicFeaturesTest.cpp  FeKnowledgeTest.cpp  FeNestedPatternTest.cpp  FePatternBaseTest.cpp  FePatternTest.cpp
fuegomain/: FuegoMain.cpp  FuegoMainEngine.cpp  FuegoMainEngine.h  FuegoMainUtil.cpp  FuegoMainUtil.h  Makefile.am
fuegotest/: FuegoTestEngine.cpp  FuegoTestEngine.h  FuegoTestMain.cpp  Makefile.am
go/: Go3x3Pattern.cpp  Go3x3Pattern.h  GoAdditiveKnowledge.cpp  GoAdditiveKnowledge.h  GoAssertBoardRestored.h  GoAutoBook.cpp  GoAutoBook.h  GoBensonSolver.cpp  GoBensonSolver.h  GoBlock.cpp  GoBlock.h  GoBoard.cpp  GoBoard.h  GoBoardCheckPerformance.cpp  GoBoardCheckPerformance.h  GoBoardHistory.cpp  GoBoardHistory.h  GoBoardRestorer.cpp  GoBoardRestorer.h  GoBoardSynchronizer.cpp  GoBoardSynchronizer.h  GoBoardUpdater.cpp  GoBoardUpdater.h  GoBoardUtil.cpp  GoBoardUtil.h  GoBook.cpp  GoBook.h  GoChain.cpp  GoChain.h  GoEvalArray.h  GoEyeCount.cpp  GoEyeCount.h  GoEyeUtil.cpp  GoEyeUtil.h  GoGame.cpp  GoGame.h  GoGtpCommandUtil.cpp  GoGtpCommandUtil.h  GoGtpEngine.cpp  GoGtpEngine.h  (+61 more)
gouct/: FeKnowledge.cpp  FeKnowledge.h  GoUctAdditiveKnowledge.cpp  GoUctAdditiveKnowledge.h  GoUctAdditiveKnowledgeFuego.cpp  GoUctAdditiveKnowledgeFuego.h  GoUctAdditiveKnowledgeGreenpeep.cpp  GoUctAdditiveKnowledgeGreenpeep.h  GoUctAdditiveKnowledgeMultiple.cpp  GoUctAdditiveKnowledgeMultiple.h  GoUctBoard.cpp  GoUctBoard.h  GoUctBookBuilder.h  GoUctBookBuilderCommands.h  GoUctCommands.cpp  GoUctCommands.h  GoUctDefaultMoveFilter.cpp  GoUctDefaultMoveFilter.h  GoUctDefaultPlayoutPolicy.cpp  GoUctDefaultPlayoutPolicy.h  GoUctDefaultPriorKnowledge.cpp  GoUctDefaultPriorKnowledge.h  GoUctDefaultRootFilter.cpp  GoUctDefaultRootFilter.h  GoUctEstimatorStat.cpp  GoUctEstimatorStat.h  GoUctFeatureCommands.cpp  GoUctFeatureCommands.h  GoUctFeatureKnowledge.cpp  GoUctFeatureKnowledge.h  GoUctFeatures.cpp  GoUctFeatures.h  GoUctGammaMoveGenerator.h  GoUctGlobalPatternData.h  GoUctGlobalSearch.cpp  GoUctGlobalSearch.h  GoUctGlobalSearchPlayer.cpp  GoUctGlobalSearchPlayer.h  GoUctGreenpeepPatterns19.h  GoUctKnowledge.cpp  (+28 more)
gouct/test/: GoUctAdditiveKnowledgeMultipleTest.cpp  GoUctBoardTest.cpp  GoUctFeatureKnowledgeTest.cpp  GoUctKnowledgeTest.cpp  GoUctLadderKnowledgeTest.cpp  GoUctPatternsTest.cpp  GoUctUtilTest.cpp
gtpengine/: GtpEngine.cpp  GtpEngine.h  GtpInputStream.cpp  GtpInputStream.h  GtpOutputStream.cpp  GtpOutputStream.h  Makefile.am
misctests/: Makefile.am  check_regression_files.sh
regression/: 9x9-blunder-endgame.tst  9x9-opening.tst  Makefile.am  backfill.tst  basics-uct.list  basics.suite  basics_fuegotest.list  basics_uct.list  bent_four.tst  blunder_long_ladder_19.tst  blunder_long_ladder_19b.tst  blunder_play_near_dead_19.tst  blunder_rave.tst  book_moves.tst  cleanup_japanese_rules.tst  deterministic_mode.list  deterministic_mode.suite  early_pass.tst  eval_seki.tst  final_moves.tst  joseki.tst  kgs-genmove_cleanup.tst  ladder.list  ladder.suite  life_and_death_nakade.tst  life_and_death_nakade_eval_0.5.tst  performance-zen-9x9.tst  performance.list  performance_2014_UEC.tst  performance_JAIST2012.tst  performance_UEC2013.tst  performance_barcelona2010.tst  play_deterministic_srand1.tst  play_deterministic_srand1_maxgames1M.tst  play_deterministic_srand2.tst  play_deterministic_srand3.tst  play_deterministic_srand4.tst  play_deterministic_srand5.tst  play_deterministic_srand6.tst  play_deterministic_srand7.tst  (+51 more)
simpleplayers/: Makefile.am  SpAveragePlayer.h  SpCapturePlayer.h  SpChaineyPlayer.cpp  SpChaineyPlayer.h  SpDumbTacticalPlayer.cpp  SpDumbTacticalPlayer.h  SpGreedyPlayer.h  SpInfluencePlayer.h  SpLadderPlayer.cpp  SpLadderPlayer.h  SpLibertyPlayer.h  SpMaxEyePlayer.cpp  SpMaxEyePlayer.h  SpMinLibPlayer.cpp  SpMinLibPlayer.h  SpMoveGenerator.cpp  SpMoveGenerator.h  SpRandomPlayer.cpp  SpRandomPlayer.h  SpSafePlayer.cpp  SpSafePlayer.h  SpSearchPlayer.cpp  SpSearchPlayer.h  SpSimplePlayer.cpp  SpSimplePlayer.h  SpUtil.cpp  SpUtil.h
smartgame/: Makefile.am  SgAdditiveKnowledge.h  SgArray.h  SgArrayList.h  SgAutoUnitTest.h  SgBWArray.h  SgBWSet.h  SgBlackWhite.h  SgBoardColor.h  SgBoardConst.cpp  SgBoardConst.h  SgBookBuilder.cpp  SgBookBuilder.h  SgCmdLineOpt.cpp  SgCmdLineOpt.h  SgConnCompIterator.h  SgDebug.cpp  SgDebug.h  SgDfpnSearch.cpp  SgDfpnSearch.h  SgEBWArray.h  SgEvaluatedMoves.cpp  SgEvaluatedMoves.h  SgException.cpp  SgException.h  SgFastLog.cpp  SgFastLog.h  SgGameReader.cpp  SgGameReader.h  SgGameWriter.cpp  SgGameWriter.h  SgGtpClient.cpp  SgGtpClient.h  SgGtpCommands.cpp  SgGtpCommands.h  SgGtpUtil.cpp  SgGtpUtil.h  SgHash.h  SgHashTable.h  SgIO.cpp  (+96 more)
smartgame/test/: SgArrayListTest.cpp  SgArrayTest.cpp  SgBWSetTest.cpp  SgBoardColorTest.cpp  SgFastLogTest.cpp  SgGtpUtilTest.cpp  SgHashTest.cpp  SgListTest.cpp  SgListUtilityTest.cpp  SgNodeTest.cpp  SgPointSetTest.cpp  SgPointTest.cpp  SgPropTest.cpp  SgRectTest.cpp  SgSListTest.cpp  SgSearchTest.cpp  SgSortedMovesTest.cpp  SgStackTest.cpp  SgStatisticsTest.cpp  SgStrategyTest.cpp  SgSystemTest.cpp  SgTimeSettingsTest.cpp  SgUctSearchTest.cpp  SgUctTreeTest.cpp  SgUctTreeUtilTest.cpp  SgUctValueTest.cpp  SgVectorTest.cpp  SgVectorUtilityTest.cpp  SgWriteTest.cpp
unittestmain/: Makefile.am  UnitTestMain.cpp
website/: Makefile  competitions.html  copy.sh  exhibition-games.html  fuego-programs.html  fuego-screenshot.html  index.html  mac-install.html  projects.html  publications.html
(+324 files in other folders)
