ACLOCAL_AMFLAGS = -Im4

SUBDIRS = \
book \
regression \
misctests \
gtpengine \
smartgame \
go \
gouct \
simpleplayers \
fuegomain \
fuegotest \
unittestmain

# TODO: This shouldn't include the non-portable makefile doc/Makefile
# Maybe use ax_prog_doxygen.m4 from the autoconf archive?
EXTRA_DIST = \
doc/smartgame/Makefile \
doc/smartgame/pages/mainpage.cpp \
doc/smartgame/pages/sgnotes.cpp \
doc/smartgame/doxygen.cfg \
doc/fuegotest/Makefile \
doc/fuegotest/pages/mainpage.cpp \
doc/fuegotest/doxygen.cfg \
doc/gouct/Makefile \
doc/gouct/pages/mainpage.cpp \
doc/gouct/doxygen.cfg \
doc/Makefile \
doc/go/Makefile \
doc/go/pages/mainpage.cpp \
doc/go/pages/goboardko.cpp \
doc/go/pages/goboardhash.cpp \
doc/go/pages/gonotes.cpp \
doc/go/doxygen.cfg \
doc/simpleplayers/Makefile \
doc/simpleplayers/pages/mainpage.cpp \
doc/simpleplayers/doxygen.cfg \
doc/pages/doxygen.css \
doc/pages/go.jpg \
doc/pages/index.html \
doc/pages/header.html \
doc/pages/footer.html \
doc/pages/toc.html \
doc/pages/main.html \
doc/fuegomain/Makefile \
doc/fuegomain/pages/mainpage.cpp \
doc/fuegomain/doxygen.cfg \
doc/general/Makefile \
doc/general/pages/mainpage.cpp \
doc/general/pages/modules.cpp \
doc/general/pages/style.cpp \
doc/general/pages/gmake.cpp \
doc/general/doxygen.cfg \
doc/gtpengine/Makefile \
doc/gtpengine/pages/mainpage.cpp \
doc/gtpengine/doxygen.cfg
