ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
book \
regression \
misctests \
gtpengine \
smartgame \
go \
gouct \
simpleplayers \
fuegomain \
fuegotest \
unittestmain

# TODO: This shouldn't include the non-portable makefile doc/Makefile
# Maybe use ax_prog_doxygen.m4 from the autoconf archive?
EXTRA_DIST = \
doc/Makefile \
doc/fuegomain/Makefile \
doc/fuegomain/doxygen.cfg \
doc/fuegomain/pages/mainpage.cpp \
doc/fuegotest/Makefile \
doc/fuegotest/doxygen.cfg \
doc/fuegotest/pages/mainpage.cpp \
doc/general/Makefile \
doc/general/doxygen.cfg \
doc/general/pages/autotools.cpp \
doc/general/pages/generalreleases.cpp \
doc/general/pages/mainpage.cpp \
doc/general/pages/modules.cpp \
doc/general/pages/portability.cpp \
doc/general/pages/style.cpp \
doc/go/Makefile \
doc/go/doxygen.cfg \
doc/go/pages/goboardhash.cpp \
doc/go/pages/goboardko.cpp \
doc/go/pages/gonotes.cpp \
doc/go/pages/mainpage.cpp \
doc/gouct/Makefile \
doc/gouct/doxygen.cfg \
doc/gouct/pages/mainpage.cpp \
doc/gtpengine/Makefile \
doc/gtpengine/doxygen.cfg \
doc/gtpengine/pages/mainpage.cpp \
doc/pages/doxygen.css \
doc/pages/footer.html \
doc/pages/go.jpg \
doc/pages/header.html \
doc/pages/index.html \
doc/pages/main.html \
doc/pages/toc.html \
doc/simpleplayers/Makefile \
doc/simpleplayers/doxygen.cfg \
doc/simpleplayers/pages/mainpage.cpp \
doc/smartgame/Makefile \
doc/smartgame/doxygen.cfg \
doc/smartgame/pages/mainpage.cpp \
doc/smartgame/pages/sgnotes.cpp
