dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_PREREQ([2.59])
AC_CONFIG_SRCDIR([go/GoBoard.cpp])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([fuego], [0.1.x])
AM_MAINTAINER_MODE
AC_PROG_CXX
AC_PROG_RANLIB
AM_PATH_CPPUNIT([1.12.0])
AX_BOOST_BASE([1.34.1])
AX_BOOST_THREAD
AX_BOOST_UNIT_TEST_FRAMEWORK
AC_OUTPUT([Makefile fuegomain/Makefile fuegotest/Makefile go/Makefile gouct/Makefile gtpengine/Makefile simpleplayers/Makefile smartgame/Makefile unittestmain/Makefile])
