noinst_LIBRARIES = libfuego_gouct.a

libfuego_gouct_a_SOURCES = \
GoUctAdditiveKnowledgeFuego.cpp \
GoUctAdditiveKnowledgeGreenpeep.cpp \
GoUctAdditiveKnowledgeMultiple.cpp \
GoUctBoard.cpp \
GoUctCommands.cpp \
GoUctDefaultPriorKnowledge.cpp \
GoUctDefaultMoveFilter.cpp \
GoUctEstimatorStat.cpp \
GoUctGlobalSearch.cpp \
GoUctKnowledge.cpp \
GoUctKnowledgeFactory.cpp \
GoUctLadderKnowledge.cpp \
GoUctObjectWithSearch.cpp \
GoUctPatterns.cpp \
GoUctPlayoutPolicy.cpp \
GoUctMoveFilter.cpp \
GoUctSearch.cpp \
GoUctUtil.cpp

noinst_HEADERS = \
GoUctAdditiveKnowledgeFuego.h \
GoUctAdditiveKnowledgeGreenpeep.h \
GoUctAdditiveKnowledgeMultiple.h \
GoUctBoard.h \
GoUctBookBuilder.h \
GoUctBookBuilderCommands.h \
GoUctCommands.h \
GoUctDefaultPriorKnowledge.h \
GoUctDefaultMoveFilter.h \
GoUctEstimatorStat.h \
GoUctGammaMoveGenerator.h \
GoUctGlobalPatternData.h \
GoUctGlobalSearch.h \
GoUctKnowledge.h \
GoUctKnowledgeFactory.h \
GoUctLadderKnowledge.h \
GoUctLocalPatternData.h \
GoUctObjectWithSearch.h \
GoUctPatternData.h \
GoUctPatterns.h \
GoUctPlayer.h \
GoUctPlayoutPolicy.h \
GoUctPlayoutUtil.h \
GoUctPureRandomGenerator.h \
GoUctMoveFilter.h \
GoUctSearch.h \
GoUctUtil.h

libfuego_gouct_a_CPPFLAGS = \
$(BOOST_CPPFLAGS) \
-I@top_srcdir@/gtpengine \
-I@top_srcdir@/smartgame \
-I@top_srcdir@/go

DISTCLEANFILES = *~
